tests/miniJava/neg/000188_mutation.MiniJava
class java { public static System.out.println Main ( String [ ] java ) { { } } }
